# ssg-sonos-now-playing

./: .gitignore  Makefile  README.md
backend/: Makefile  README.md  app.py  pyproject.toml
backend/backend/: app.py
docker/: backend.dockerfile  docker-compose.yml  frontend.dockerfile  nginx.conf
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
