[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "John Leonard",email = "john@lowkeylabs.com"}
]

packages = [
    { include = "backend" }
]

readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "soco (>=0.30.10,<0.31.0)",
    "flask-cors (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
